--- a/main.scss
+++ b/main.scss
@@ -161,8 +161,58 @@ a {
 .unit {
     grid-column: 3 / 4;
     place-self: end;
+    color: var(--clr-light);
+    display: flex;
+    opacity: .7;
+    transition: opacity 275ms linear;
+
+    &:hover {
+        opacity: 1;
+    }
+
+  label {
+        cursor: pointer;
+    }
+
+    input {
+        clip: rect(0 0 0 0);
+        -webkit-clip-path: inset(50%);
+                clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+      }
+
+    &__toggle {
+        cursor: pointer;
+        width: 4em;
+        border: 2px solid var(--clr-light);
+        background: transparent;
+        padding: 0;
+        border-radius: 100vmax;
+        margin: 0 1em;
+
+
+        &::after {
+            content: '';
+            display: block;
+            background: var(--clr-light);
+            border-radius: 50%;
+            height: 1rem;
+            margin: 3px;
+            margin-left: auto;
+            width: 1rem;
+        }
+
+    }
+
+    :checked ~ .unit__toggle::after {
+        margin-left: 3px;
+    }
 }
 
-.unit-toggle {
-    grid-column: 3 / 4
-}
+
+
+
