--- a/main.css
+++ b/main.css
@@ -229,7 +229,48 @@ a:hover {
   width: 1rem;
 }
 
-.unit :checked ~ .unit__toggle::after {
+:checked ~ .unit__toggle::after {
   margin-left: 3px;
+}
+
+.previous-weather {
+  background: var(--clr-light);
+  color: var(--clr-gray);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  -webkit-transform: translateY(60%);
+          transform: translateY(60%);
+  -webkit-transition: -webkit-transform 350ms ease;
+  transition: -webkit-transform 350ms ease;
+  transition: transform 350ms ease;
+  transition: transform 350ms ease, -webkit-transform 350ms ease;
+}
+
+.show-previous-weather {
+  position: absolute;
+  background: var(--clr-light);
+  left: 50%;
+  width: 10rem;
+  -webkit-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  text-align: center;
+  font-size: var(--fs-h2);
+  line-height: 1;
+  -webkit-clip-path: polygon(50% 0, 0 100%, 100% 100%);
+          clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  cursor: pointer;
+  color: var(--clr-gray);
+}
+
+.previous-days {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.show-weather {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 /*# sourceMappingURL=main.css.map */
