--- a/main.scss
+++ b/main.scss
@@ -208,11 +208,44 @@ a {
 
     }
 
-    :checked ~ .unit__toggle::after {
-        margin-left: 3px;
-    }
 }
 
+:checked ~ .unit__toggle::after {
+    margin-left: 3px;
+}
+
+.previous-weather {
+    background: var(--clr-light);
+    color: var(--clr-gray);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transform: translateY(60%);
+    transition: transform 350ms ease;
+}
+
+.show-previous-weather {
+    position: absolute;
+    background: var(--clr-light);
+    left: 50%;
+    width: 10rem;
+    transform: translate(-50%, -100%);
+    text-align: center;
+    font-size: var(--fs-h2);
+    line-height: 1;
+    clip-path: polygon(50% 0, 0 100%, 100% 100%);
+    cursor: pointer;
+    color: var(--clr-gray);
+
+}
+
+.previous-days {
+    display: flex;
+}
+
+.show-weather {
+    transform: translateY(0);
+}
 
 
 
