Project Structure fixed

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 :root {
@@ -10,10 +10,10 @@
   --fw-normal: 400;
   --fw-semi: 500;
   --fw-bold: 700;
-  --fs-h1: 1.25rem;
-  --fs-h2: 1.75rem;
+  --fs-h1: 1.5rem;
+  --fs-h2: 2.25rem;
   --fs-body: 1rem;
-  --fs-xl: 4rem;
+  --fs-xl: 4.5rem;
   --clr-light: #fff;
   --clr-gray: #989898;
   --clr-dark: #444;
@@ -24,7 +24,7 @@
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -36,10 +36,11 @@ body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   line-height: 1.6;
-  background-image: url(img/mars.jpg);
+  background-image: url(../img/mars.jpg);
   background-size: cover;
+  height: 100vh;
+  overflow: hidden;
   color: var(--clr-light);
-  min-height: 100vh;
 }
 
 h1, h2, h3 {
@@ -56,7 +57,7 @@ a:hover {
 
 .main-title {
   font-size: var(--fs-h1);
-  font-weight: var(--fs-light);
+  font-weight: var(--fw-light);
   text-transform: uppercase;
   color: var(--clr-accent);
   letter-spacing: 2px;
@@ -81,10 +82,9 @@ a:hover {
 
 .mars-current-weather {
   background: rgba(0, 0, 0, 0.7);
-  padding: 2rem;
+  padding: 2em;
   max-width: 1000px;
   margin: 4em 0 0 4em;
-  border-radius: 1.5em;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
@@ -106,7 +106,7 @@ a:hover {
 }
 
 .temp {
-  --border: solid .17em var(--clr-accent-dark);
+  --border: solid .25em var(--clr-accent-dark);
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
@@ -152,7 +152,9 @@ a:hover {
 }
 
 .wind__arrow {
-  --direction: 0deg;
+  /* update Custom Props in JS
+        to update the direction */
+  --direction: 180deg;
   --size: 1rem;
   height: calc(var(--size) * 3);
   width: var(--size);
@@ -200,7 +202,7 @@ a:hover {
 .unit input {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -235,7 +237,7 @@ a:hover {
 
 .previous-weather {
   background: var(--clr-light);
-  color: var(--clr-gray);
+  color: var(--clr-dark);
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -245,6 +247,7 @@ a:hover {
   transition: -webkit-transform 350ms ease;
   transition: transform 350ms ease;
   transition: transform 350ms ease, -webkit-transform 350ms ease;
+  padding: 3rem;
 }
 
 .show-previous-weather {
@@ -252,8 +255,8 @@ a:hover {
   background: var(--clr-light);
   left: 50%;
   width: 10rem;
-  -webkit-transform: translate(-50%, -100%);
-          transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, calc(-100% - 3rem));
+          transform: translate(-50%, calc(-100% - 3rem));
   text-align: center;
   font-size: var(--fs-h2);
   line-height: 1;
@@ -261,16 +264,144 @@ a:hover {
           clip-path: polygon(50% 0, 0 100%, 100% 100%);
   cursor: pointer;
   color: var(--clr-gray);
+  border: 0;
+  font-family: inherit;
+}
+
+.show-previous-weather:hover, .show-previous-weather:focus {
+  color: var(--clr-dark);
+}
+
+.show-previous-weather span {
+  display: block;
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
 }
 
 .previous-days {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.show-weather {
+.previous-weather__title {
+  text-align: center;
+}
+
+.previous-day {
+  opacity: 0;
+}
+
+.previous-day > * {
+  margin: 0;
+}
+
+.previous-day__date {
+  font-size: .9rem;
+  color: var(--clr-gray);
+}
+
+.previous-day__more-info {
+  cursor: pointer;
+  border: 0;
+  border-radius: 100vmax;
+  background: var(--clr-dark);
+  color: var(--clr-light);
+  text-transform: uppercase;
+  padding: .3em 1em;
+  margin-top: 1em;
+}
+
+.previous-day__more-info:hover {
+  background: var(--clr-gray);
+}
+
+.show-weather.previous-weather {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+
+.show-weather.previous-weather .show-previous-weather span {
+  display: block;
+  -webkit-transform: rotate(180deg) translateY(-6px);
+          transform: rotate(180deg) translateY(-6px);
+}
+
+.show-weather.previous-weather .previous-weather__title,
+.show-weather.previous-weather .previous-day {
+  -webkit-animation: slideUpIn 750ms forwards;
+          animation: slideUpIn 750ms forwards;
+}
+
+.show-weather.previous-weather .previous-weather__title {
+  text-align: left;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(1) {
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(2) {
+  -webkit-animation-delay: 125ms;
+          animation-delay: 125ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(3) {
+  -webkit-animation-delay: 150ms;
+          animation-delay: 150ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(4) {
+  -webkit-animation-delay: 175ms;
+          animation-delay: 175ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(5) {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(6) {
+  -webkit-animation-delay: 225ms;
+          animation-delay: 225ms;
+}
+
+.show-weather.previous-weather .previous-day:nth-child(7) {
+  -webkit-animation-delay: 300ms;
+          animation-delay: 300ms;
+}
+
+@-webkit-keyframes slideUpIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes slideUpIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 /*# sourceMappingURL=main.css.map */
